--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
   <body>
-    <div ng-app="">
+    <div ng-app="main">
       <div ng-controller="mainCtrl">
         <div ng-repeat="t in toasters">
          <ng-bootstrap-toast 
